# Investigation-software

./: .gitignore  CONTRIBUTING.md  INTEGRATION_STATUS.md  LICENSE  README.md  RUST_BACKEND_GUIDE.md
leip/: .env.example  COMPLETION_SUMMARY.txt  DELIVERABLES.md  Dockerfile.api  Dockerfile.dashboard  QUICKSTART.py  README.md  USAGE_SCENARIOS.md  docker-compose.yml  init.py  requirements.txt
leip/app/: __init__.py  api.py  cctv_processor.py  crud.py  database.py  face_utils.py  models.py  models_db.py  plate_recognition.py  schemas.py  terminal_executor.py  yolo_detector.py
leip/config/: __init__.py  settings.py
leip/database/: schema.sql
leip/frontend/: app.py
leip/tests/: test_detector_architecture.py  test_modules.py  test_terminal.py  test_yolo_detector_integration.py
yolo_detector-main/: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
yolo_detector-main/src/: lib.rs  main.rs
